# mini-dnn-cpp

./: CMakeLists.txt  LICENSE  demo.cc  example.cc  example.cpp  main.cc  readme.md
parameters/: conv1.txt  conv2.txt  ep_12_0.861800_conv1.txt  ep_12_0.861800_conv2.txt  ep_12_0.861800_fc3.txt  ep_12_0.861800_fc4.txt  ep_12_0.861800_fc5.txt  fc3.txt  fc4.txt  fc5.txt  tt.txt
src/: CMakeLists.txt  fully_connected.cc  fully_connected.h  layer.h  loss.h  matrix_demo.cpp  matrix_demo.h  mnist.cc  mnist.h  mse_loss.cc  mse_loss.h  network.cc  network.h  optimizer.h  parameter.cpp  parameter.h  sgd.cc  sgd.h  sigmoid.h  utils.h
src/device/: Operator.cu  Operator.h  Util.cu  Util.h  conv_2kernel.cu  gpu_fully_connected.cu  gpu_fully_connected.h
src/layer/: ave_pooling.cc  ave_pooling.h  conv.cc  conv.h  fully_connected.cc  fully_connected.h  max_pooling.cc  max_pooling.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h  softmax.cc  softmax.h
src/loss/: cross_entropy_loss.cc  cross_entropy_loss.h  mse_loss.cc  mse_loss.h
src/operator/: Operator.cpp  Operator.h
src/optimizer/: sgd.cc  sgd.h
